# TDA-Video

./: .gitignore  README.md
animate/: CMakeLists.txt
animate/include/: consola.h  tablerografico.h  ventana.h
animate/src/: animate.cpp  tablerografico.cpp
estudiante/: CMakeLists.txt
estudiante/datos/imagenes/: Azucena.pgm  Pedro.pgm
estudiante/datos/videos/football/: football0001.pgm  football0002.pgm  football0004.pgm  football0005.pgm  football0006.pgm  football0008.pgm  football0010.pgm  football0012.pgm  football0013.pgm  football0014.pgm  football0015.pgm  football0017.pgm  football0020.pgm  football0021.pgm  football0022.pgm  football0023.pgm  football0024.pgm  football0025.pgm  football0026.pgm  football0027.pgm  football0028.pgm  football0029.pgm  football0031.pgm  football0032.pgm  football0035.pgm  football0036.pgm  football0038.pgm  football0039.pgm  football0040.pgm  football0041.pgm  football0042.pgm  football0046.pgm  football0049.pgm  football0052.pgm  football0055.pgm  football0058.pgm  football0060.pgm  football0061.pgm  football0062.pgm  football0063.pgm  (+139 more)
estudiante/datos/videos/missa/: missa000.pgm  missa001.pgm  missa002.pgm  missa003.pgm  missa004.pgm  missa005.pgm  missa006.pgm  missa007.pgm  missa008.pgm  missa009.pgm  missa010.pgm  missa011.pgm  missa012.pgm  missa013.pgm  missa014.pgm  missa015.pgm  missa016.pgm  missa017.pgm  missa018.pgm  missa019.pgm  missa020.pgm  missa021.pgm  missa022.pgm  missa023.pgm  missa024.pgm  missa025.pgm  missa026.pgm  missa027.pgm  missa028.pgm  missa029.pgm  missa030.pgm  missa031.pgm  missa032.pgm  missa033.pgm  missa034.pgm  missa035.pgm  missa036.pgm  missa037.pgm  missa038.pgm  missa039.pgm  (+109 more)
estudiante/datos/videos/morph_test/: fotograma_000.pgm  fotograma_001.pgm  fotograma_002.pgm  fotograma_003.pgm  fotograma_004.pgm  fotograma_005.pgm  fotograma_006.pgm  fotograma_007.pgm  fotograma_008.pgm  fotograma_009.pgm  fotograma_010.pgm  fotograma_011.pgm  fotograma_012.pgm  fotograma_013.pgm  fotograma_014.pgm  fotograma_015.pgm  fotograma_016.pgm  fotograma_017.pgm  fotograma_018.pgm  fotograma_019.pgm  fotograma_020.pgm  fotograma_021.pgm  fotograma_022.pgm  fotograma_023.pgm  fotograma_024.pgm  fotograma_025.pgm  fotograma_026.pgm  fotograma_027.pgm  fotograma_028.pgm  fotograma_029.pgm  fotograma_030.pgm  fotograma_031.pgm  fotograma_032.pgm  fotograma_033.pgm  fotograma_034.pgm  fotograma_035.pgm  fotograma_036.pgm  fotograma_037.pgm  fotograma_038.pgm  fotograma_039.pgm  (+160 more)
estudiante/datos/videos/rewind_test/: rewind-0.pgm  rewind-007.pgm  rewind-008.pgm  rewind-009.pgm  rewind-011.pgm  rewind-013.pgm  rewind-014.pgm  rewind-020.pgm  rewind-024.pgm  rewind-025.pgm  rewind-026.pgm  rewind-028.pgm  rewind-036.pgm  rewind-040.pgm  rewind-043.pgm  rewind-046.pgm  rewind-052.pgm  rewind-053.pgm  rewind-057.pgm  rewind-063.pgm  rewind-069.pgm  rewind-070.pgm  rewind-076.pgm  rewind-077.pgm  rewind-084.pgm  rewind-090.pgm  rewind-091.pgm  rewind-094.pgm  rewind-095.pgm  rewind-096.pgm  rewind-1.pgm  rewind-10.pgm  rewind-100.pgm  rewind-101.pgm  rewind-102.pgm  rewind-103.pgm  rewind-104.pgm  rewind-105.pgm  rewind-106.pgm  rewind-107.pgm  (+252 more)
estudiante/doc/: mainpage.dox
estudiante/include/: video.h
estudiante/src/: image.cpp  imageIO.cpp  morphing.cpp  rebobinar.cpp  video.cpp
